Sets mark symlinked directories to on.

--- a/.inputrc
+++ b/.inputrc
@@ -11,6 +11,7 @@ TAB: menu-complete
 "\C-w": unix-filename-rubout
 "": unix-filename-rubout
 
+set mark-symlinked-directories on
 set completion-ignore-case on
 set completion-query-items 10000
 set show-all-if-ambiguous on
