--- a/.inputrc
+++ b/.inputrc
@@ -17,3 +17,5 @@ set completion-map-case on
 set completion-query-items 10000
 set page-completions off
 set show-all-if-ambiguous on
+set completion-prefix-display-length 2
+
