--- a/.inputrc
+++ b/.inputrc
@@ -20,4 +20,5 @@ set completion-query-items 10000
 set page-completions off
 set show-all-if-ambiguous on
 set completion-prefix-display-length 2
+set visible-stats on
 
